# vscode-chat-continue

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  ALTERNATIVE_CONTINUE_METHODS.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGING_GUIDE.py  DISCOVERY_SUMMARY.md  FREEZE_DETECTION_SUMMARY.md  FREEZE_DETECTION_SYSTEM.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_GOALS.md  PROJECT_MODERNIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SUCCESS_REPORT.py  TERMINATION_FEATURE_SUMMARY.md  TEST_RESULTS_SUMMARY.md  WORKFLOW.md  comprehensive_diagnosis.py  coordinate_fallback.py  debug_automation.py  debug_button_detection.py  demo_freeze_detection.py  demo_vscode_monitor.py  enhanced_button_test.py  kill_automation.py  performance_optimizer.py  pyproject.toml  pyproject.toml.extra  requirements-dev.txt  requirements-enhanced.txt  requirements.txt  run.sh  simple_diagnostic.py  simple_unfocus_test.py  stop.sh  test_actual_detection.py  (+14 more)
.copilot/: context.md  instructions.md  project-info.md  prompts.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  quality-assurance.yml  release.yml
assets/: test_continue_button.html
config/: default.json
docs/: AUTO_SETUP_ENHANCEMENT.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIXES.md  ENHANCEMENT_SUGGESTIONS.md  EXTENSION_ALTERNATIVE.md  FALLBACK_STRATEGY.md  GUI_FIX_STATUS.md  MODERNIZATION_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  SAFE_AUTOMATION_IMPROVEMENTS.md  SAFE_MODE_DEFAULT.md  SCREENSHOT_STATUS.md  SYSTEM_FREEZING_FIX.md  SYSTEM_STATUS.md  TESTING.md  TEST_AUTOMATION.md  TROUBLESHOOTING.md  TUTORIAL.md  USAGE.md  WINDOW_DETECTION_FIX.md
docs/api/: API_REFERENCE.md
docs/development/: DEVELOPMENT.md
docs/guides/: ENHANCEMENT_INTEGRATION.md  INSTALLATION.md  TROUBLESHOOTING.md
docs/reports/: AUTOMATION_STATUS.py  PROJECT_MODERNIZATION_SUMMARY.md  SUCCESS_REPORT.py
logs/: .gitkeep
scripts/: collect_debug_info.py  continuous_automation.py  dev.sh  final_cleanup.sh  health_check.py  high_capacity_automation.py  install.sh  install_tesseract.sh  kill_automation.py  lightweight_automation.py  modernize_project.py  organize_files.sh  relaxed_automation.py  run.sh  run_automation.sh  run_safe.sh  safe_automation.py  setup.py  terminate_automation.py  test_automation.sh  test_window_detection.sh  validate_modernization.py
src/: main.py
src/core/: automation_engine.py  button_finder.py  click_automator.py  config_manager.py  enhanced_button_detector.py  enhanced_vscode_monitor.py  practical_enhancements.py  vscode_monitor.py  window_detector.py  window_focus_manager.py
src/gui/: main_window.py
src/utils/: audio_suppressor.py  gnome_screenshot_fix.py  logger.py  screen_capture.py
tests/: CLEANUP_GUIDE.md  GUI_STATUS.md  README.md  cleanup_root_comprehensive.sh  comprehensive_test_suite.py  conftest.py  debug_automation_simple.py  debug_button_detection_verbose.py  debug_import_test.py  debug_imports.py  debug_minimal.py  debug_test.py  debug_window_detection.py  debug_window_simple.py  diagnostic.py  diagnostic_deep.py  file_diagnosis.py  live_demo.py  manual_click_test.py  organize_test_files.sh  pyunit_suite.py  quick_automation_test.py  quick_diagnostic.py  quick_unfocus_test.py  run_tests.py  test_all_phases.py  test_automation_debug.py  test_automation_init.py  test_automation_verbose.py  test_basic.py  test_button_detection.py  test_continue_button_recognition.py  test_detection.py  test_freeze_detection_10s.py  test_freeze_detection_goals.py  test_freeze_detection_simple.py  test_gui_fix.py  test_gui_simple.py  test_imports.py  test_main_final.py  (+16 more)
tests/automation/: quick_button_click_test.py  test_automation_quick.py  test_direct_automation.py
tests/debug/: debug_button_detection_verbose.py  debug_ocr.py  no_filter_automation.py  no_filter_test.py  visual_capture_test.py
tests/diagnostic/: advanced_click_diagnostic.py  aggressive_detection.py  button_location_test.py  button_troubleshooting.py  comprehensive_button_diagnostic.py  comprehensive_test_suite.py  core_detection_test.py  final_diagnostic.py  image_analysis.py  multi_window_test.py  quick_button_test.py  window_position_debug.py
tests/fixtures/: test_continue_button.html
tests/integration/: debug_automation.py  kill_automation.py  lightweight_automation.py  live_unfocus_demo.py  simple_unfocus_test.py  test_actual_detection.py  test_beep_suppression.py  test_button_detection.py  test_coordinate_clicking.py  test_coordinate_detection.py  test_detection_debug.py  test_end_to_end.py  test_error_handling.py  test_full_automation.py  test_multi_window.py  test_real_clicking.py  test_simple_screenshot.py  test_unfocused_automation.py
tests/manual/: capture_mouse_position.py  enhanced_button_test.py  fixed_realtime_test.py  interactive_test.py  live_button_diagnosis.py  manual_detection_test.py  quick_capture.py  realtime_button_test.py  realtime_detection_test.py  simple_click_test.py  target_computer_vision.py  targeted_automation.py  test_specific_continue.py
tmp/: .gitkeep
tools/: coordinate_finder.py
(+23 files in other folders)
